# DataMind-BI

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: analytics.py  health.py
backend/app/core/: __init__.py  config.py  sql_sanitizer.py  telemetry.py
backend/app/models/: __init__.py  domain_schemas.py
backend/app/services/: dataset_ingestion.py  report_generator.py
backend/app/services/ai/: __init__.py  code_interpreter.py  guardrails.py  prompt_factory.py  provider.py
backend/app/services/statistics/: frequency.py  heuristics.py  sampling.py
backend/tests/: __init__.py  conftest.py  test_ai_provider.py  test_analytics.py  test_code_interpreter.py  test_dataset_ingestion.py  test_frequency.py  test_guardrails.py  test_health.py  test_heuristics.py  test_production_safety.py  test_report_generator.py  test_sampling.py
docs/: PRD.md  USER_STORIES.md
docs/adr/: 001-duckdb-sandbox.md  002-ibge-heuristics.md
docs/files_examples/: datavision_funcionarios.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/canvas/: GenerativeCanvas.tsx
frontend/src/components/chat/: ConversationalBI.tsx
frontend/src/components/layout/: AccessibilityModal.tsx  WorkspaceShell.tsx
frontend/src/components/shared/: MethodologyModal.tsx
frontend/src/services/: sseClient.ts
frontend/src/store/: useChatStore.ts  useConfigStore.ts  useStore.ts
frontend/src/utils/: exportUtils.ts
project_docs/: context.md
(+6 files in other folders)
