[project]
name = "datamind-bi"
version = "0.1.0"
description = "Business Intelligence platform with guided statistics and conversational AI."
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "duckdb>=1.2,<2",
    "openpyxl>=3.1,<4",
    "python-multipart>=0.0.18",
    "google-genai>=1.0,<2",
    "reportlab>=4.0,<5",
    "langfuse>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
